# LeptonPad

./: .env.example  .gitignore  LICENSE  THIRD_PARTY_NOTICES.md  build.ts  deno.json  dev.ts  main.ts  readme.md  sample_project.json  serve.ts
public/: config.js  index.html  sw.js
solver/: Cargo.toml  solver.ts
solver/pkg/: package.json  solver.d.ts  solver.js  solver_bg.wasm-opt.wasm  solver_bg.wasm.d.ts
solver/src/: lib.rs
src/: auth.ts  canvas.ts  crypto.ts  dnd.ts  expr.ts  license.ts  main.ts  persistence.ts  solver.ts  state.ts  types.ts
src/blocks/: _math-block-helpers.ts  beam-def.ts  figure.ts  formula.ts  plot.ts  sect-prop.ts  section.ts  text.ts
src/blocks/pro/: section.ts
src/styles/: main.css
src/utils/: markdown.ts  theme.ts  units.ts
supabase/: schema.sql
